# bowling

./: CMakeLists.txt  input_example.txt
qml/: BowlingLane.qml  main.qml  qml.qrc
src/: game.cpp  game.h  game_backend.cpp  game_backend.h  input.cpp  input.h  main.cpp  main_cmd.cpp
test/: CMakeLists.txt  tst_input.cpp
test_cmd/: CMakeLists.txt  tst_game_backend.cpp
